[package]
name = "interlumen"
version = "0.1.0"
edition = "2021"
authors = ["krozzzis"]

[features]
default = ["gui", "console"]
gui = []
console = []

[dependencies]
anyhow = "1.0.71"

rayon = "1.7"

interlumen_core = {path = "./interlumen_core"}
interlumen_render = {path = "./interlumen_render"}

#[cfg(feature = "console")]
crossterm = "0.26.1"

#[cfg(feature = "gui")]
minifb = "0.24.0"

[profile.release]
lto = true
